Incluindo opcao 'Ignorado' em todos os itens de 'Posse de itens'; 	Autora: Andressa Sivolella <andressasivolella@gmail.com>

--- a/media/index.html
+++ b/media/index.html
@@ -195,100 +195,109 @@
 						<div id='divFreezer' class='primary required'>
 							<label for='freezer'>Freezer(normal ou porta duplex):</label>
 							<select name='freezer' id='freezer' class='primary' style='width:176px'>
-								<option value=''	>----		</option>
-								<option value='nao'	>Não		</option>
-								<option value='1'	>1			</option>
-								<option value='2'	>2			</option>
-								<option value='3'	>3			</option>
-								<option value='4'	>4 ou mais	</option>
+								<option value=''		>----		</option>
+								<option value='nao'		>Não		</option>
+								<option value='1'		>1			</option>
+								<option value='2'		>2			</option>
+								<option value='3'		>3			</option>
+								<option value='4'		>4 ou mais	</option>
+								<option value='ignorado'>Ignorado	</option>
 							</select>
 						</div>
 						<div id='divGeladeira' class='primary required'>
 							<label for='geladeira'>Geladeira(simples ou duplex):</label>
 							<select name='geladeira' id='geladeira' class='primary' style='width:176px'>
-								<option value=''	>----		</option>
-								<option value='nao'	>Não		</option>
-								<option value='1'	>1			</option>
-								<option value='2'	>2			</option>
-								<option value='3'	>3			</option>
-								<option value='4'	>4 ou mais	</option>
+								<option value=''		>----		</option>
+								<option value='nao'		>Não		</option>
+								<option value='1'		>1			</option>
+								<option value='2'		>2			</option>
+								<option value='3'		>3			</option>
+								<option value='4'		>4 ou mais	</option>
+								<option value='ignorado'>Ignorado	</option>
 							</select>
 						</div>
 						<div id='divMaquinaLavarRoupa' class='primary required'>
 							<label for='maquinaLavarRoupa'>Máquina de lavar roupa:</label>
 							<select name='maquinaLavarRoupa' id='maquinaLavarRoupa' class='primary' style='width:176px'>
-								<option value=''	>----		</option>
-								<option value='nao'	>Não		</option>
-								<option value='1'	>1			</option>
-								<option value='2'	>2			</option>
-								<option value='3'	>3			</option>
-								<option value='4'	>4 ou mais	</option>
+								<option value=''		>----		</option>
+								<option value='nao'		>Não		</option>
+								<option value='1'		>1			</option>
+								<option value='2'		>2			</option>
+								<option value='3'		>3			</option>
+								<option value='4'		>4 ou mais	</option>
+								<option value='ignorado'>Ignorado	</option>
 							</select>
 						</div>
 						<div id='divVideoDVD' class='primary required'>
 							<label for='videoDVD'>Vídeo cassete / DVD:</label>
 							<select name='videoDVD' id='videoDVD' class='primary' style='width:176px'>
-								<option value=''	>----		</option>
-								<option value='nao'	>Não		</option>
-								<option value='1'	>1			</option>
-								<option value='2'	>2			</option>
-								<option value='3'	>3			</option>
-								<option value='4'	>4 ou mais	</option>
+								<option value=''		>----		</option>
+								<option value='nao'		>Não		</option>
+								<option value='1'		>1			</option>
+								<option value='2'		>2			</option>
+								<option value='3'		>3			</option>
+								<option value='4'		>4 ou mais	</option>
+								<option value='ignorado'>Ignorado	</option>
 							</select>
 						</div>
 						<div id='divTelevisao' class='primary required'>
 							<label for='televisao'>Televisão:</label>
 							<select name='televisao' id='televisao' class='primary' style='width:176px'>
-								<option value=''	>----		</option>
-								<option value='nao'	>Não		</option>
-								<option value='1'	>1			</option>
-								<option value='2'	>2			</option>
-								<option value='3'	>3			</option>
-								<option value='4'	>4 ou mais	</option>
+								<option value=''		>----		</option>
+								<option value='nao'		>Não		</option>
+								<option value='1'		>1			</option>
+								<option value='2'		>2			</option>
+								<option value='3'		>3			</option>
+								<option value='4'		>4 ou mais	</option>
+								<option value='ignorado'>Ignorado	</option>
 							</select>
 						</div>
 						<div id='divRadio' class='primary required'>
 							<label for='radio'>Rádio:</label>
 							<select name='radio' id='radio' class='primary' style='width:176px'>
-								<option value=''	>----		</option>
-								<option value='nao'	>Não		</option>
-								<option value='1'	>1			</option>
-								<option value='2'	>2			</option>
-								<option value='3'	>3			</option>
-								<option value='4'	>4 ou mais	</option>
+								<option value=''		>----		</option>
+								<option value='nao'		>Não		</option>
+								<option value='1'		>1			</option>
+								<option value='2'		>2			</option>
+								<option value='3'		>3			</option>
+								<option value='4'		>4 ou mais	</option>
+								<option value='ignorado'>Ignorado	</option>
 							</select>
 						</div>
 						<div id='divBanheiro' class='primary required'>
 							<label for='banheiro'>Banheiro:</label>
 							<select name='banheiro' id='banheiro' class='primary' style='width:176px'>
-								<option value=''	>----		</option>
-								<option value='nao'	>Não		</option>
-								<option value='1'	>1			</option>
-								<option value='2'	>2			</option>
-								<option value='3'	>3			</option>
-								<option value='4'	>4 ou mais	</option>
+								<option value=''		>----		</option>
+								<option value='nao'		>Não		</option>
+								<option value='1'		>1			</option>
+								<option value='2'		>2			</option>
+								<option value='3'		>3			</option>
+								<option value='4'		>4 ou mais	</option>
+								<option value='ignorado'>Ignorado	</option>
 							</select>
 						</div>
 						<div id='divAutomovel' class='primary required'>
 							<label for='automovel'>Automóvel:</label>
 							<select name='automovel' id='automovel' class='primary' style='width:176px'>
-								<option value=''	>----		</option>
-								<option value='nao'	>Não		</option>
-								<option value='1'	>1			</option>
-								<option value='2'	>2			</option>
-								<option value='3'	>3			</option>
-								<option value='4'	>4 ou mais	</option>
+								<option value=''		>----		</option>
+								<option value='nao'		>Não		</option>
+								<option value='1'		>1			</option>
+								<option value='2'		>2			</option>
+								<option value='3'		>3			</option>
+								<option value='4'		>4 ou mais	</option>
+								<option value='ignorado'>Ignorado	</option>
 							</select>
 						</div>
 						<div id='divEmpregadaMensalista' class='primary required'>
 							<label for='empregadaMensalista'>Empregada Mensalista:</label>
 							<select name='empregadaMensalista' id='empregadaMensalista' class='primary' style='width:176px'>
-								<option value=''	>----		</option>
-								<option value='nao'	>Não		</option>
-								<option value='1'	>1			</option>
-								<option value='2'	>2			</option>
-								<option value='3'	>3			</option>
-								<option value='4'	>4 ou mais	</option>
+								<option value=''		>----		</option>
+								<option value='nao'		>Não		</option>
+								<option value='1'		>1			</option>
+								<option value='2'		>2			</option>
+								<option value='3'		>3			</option>
+								<option value='4'		>4 ou mais	</option>
+								<option value='ignorado'>Ignorado	</option>
 							</select>
 						</div>
 						<div id='divClasseSocial' name='divClasseSocial' class='primary required'>
