Acrescentando opcao 'Ignorado' em 'Causas médicas' e 'Causas não 	médicas' em 'Qual a causa da internação'; 	Autora: Andressa Sivolella <andressasivolella@gmail.com>

--- a/media/index.html
+++ b/media/index.html
@@ -322,6 +322,7 @@
 							<option value='pacientePsiquiatrico'> Paciente Psiquiátrico	</option>
 							<option value='decidiuSozinho'		> Decidiu sozinho		</option>
 							<option value='outros'				> Outros				</option>
+							<option value='ignorado'			> Ignorado				</option>
 						</select>
 					</div>
 					<div id='divEspecificarCausasNaoMedicas' class='secondary'>
@@ -342,6 +343,7 @@
 							<option value='hiv'						 > HIV						  </option>
 							<option value='tbPleural'				 > TB pleural				  </option>
 							<option value='outros'					 > Outros					  </option>
+							<option value='ignorado'				 > Ignorado					  </option>
 						</select>
 					</div>
 					<div id='divEspecificarCausasMedicas' class='secondary'>
