Retirando a obrigatoriedade do campo 'Tempo de emagrecimento' em 	'Sinais, sintomas e dados clinicos';

--- a/media/index.html
+++ b/media/index.html
@@ -336,7 +336,7 @@
 						<div id='divProcurouUnidadeSaudePorOrientacao' class='primary required'>
 							<label for='procurouUnidadeSaudePorOrientacao'>Você procurou a unidade de saúde por orientação de alguém?</label>
 							<select name='procurouUnidadeSaudePorOrientacao' id='procurouUnidadeSaudePorOrientacao' class='primary' style='width:176px'>
-								<option value='ignorado'>Ignorado </option>
+								<option value='ignorado'>Ignorado 40</option>
 								<option value='decidiuSozinho'>Decidiu sozinho</option>
 								<option value='orientadoPorFamiliar'>Orientado por familiar</option>
 								<option value='visitaFamiliar'>Visita domiciliar</option>
@@ -368,7 +368,7 @@
 						<label for='tempoEmagrecimento'>Tempo de Emagrecimento:</label>
 						<input type="text" size="5" maxlength="5" class="number" name="tempoEmagrecimento" id="tempoEmagrecimento"/ > mes(es)
 					</div>
-					<div id='divEmagrecimento' class='primary required'>
+					<div id='divEmagrecimento' class='primary'>
 						<label for='emagrecimento'>Emagrecimento:</label>
 						<input type="text" size="10" maxlength="3" name="emagrecimento" id="emagrecimento" readonly/ >
 					</div>
