--- a/media/index.html
+++ b/media/index.html
@@ -336,7 +336,7 @@
 						<div id='divProcurouUnidadeSaudePorOrientacao' class='primary required'>
 							<label for='procurouUnidadeSaudePorOrientacao'>Você procurou a unidade de saúde por orientação de alguém?</label>
 							<select name='procurouUnidadeSaudePorOrientacao' id='procurouUnidadeSaudePorOrientacao' class='primary' style='width:176px'>
-								<option value='ignorado'>Ignorado 40</option>
+								<option value='ignorado'>Ignorado</option>
 								<option value='decidiuSozinho'>Decidiu sozinho</option>
 								<option value='orientadoPorFamiliar'>Orientado por familiar</option>
 								<option value='visitaFamiliar'>Visita domiciliar</option>
