--- a/media/index.html
+++ b/media/index.html
@@ -384,7 +384,7 @@
 						<label for='tempoEmagrecimento'>Tempo de Emagrecimento:</label>
 						<input type="text" size="5" maxlength="5" class="number" name="tempoEmagrecimento" id="tempoEmagrecimento"/ > mes(es)
 					</div>
-					<div id='divEmagrecimento' class='primary required'>
+					<div id='divEmagrecimento' class='primary'>
 						<label for='emagrecimento'>Emagrecimento:</label>
 						<input type="text" size="10" maxlength="3" name="emagrecimento" id="emagrecimento" readonly/ >
 					</div>
