--- a/media/index.html
+++ b/media/index.html
@@ -6,8 +6,8 @@
 	<script type="text/javascript" src="js/jquery.autocomplete.js"></script>
 	<script type="text/javascript" src="js/jquery.validate.js"></script>
 	<script type="text/javascript" src="js/jquery.readonly.js"></script>
-	<script type="text/javascript" src="js/jquery.timeentry.min.js"></script>
-	<script type="text/javascript" src="js/jquery.timeentry-pt.js"></script>
+	<script type="text/javascript" src="js/jquery.livequery.js"></script>
+	<script type="text/javascript" src="js/jquery.timeentry.js"></script>
 	<script src='./js/messages_ptbr.js'   type='text/javascript'></script>
 	<script type="text/javascript" src="js/jquery.confirm.js"></script>
 	<script src='./js/tb.validation.jquery.js'   type='text/javascript'></script>
@@ -20,6 +20,7 @@
 		@import url(./css/smoothness/jquery-ui.css);
 		@import url(./css/readonly.css);
 		@import url(./css/styles.css);
+		@import url(.css/jquery.timeentry.css);
 	-->
 	</style>
 	<title>Triagem de Pacientes - Implementação (Hospital)</title>
@@ -36,7 +37,7 @@
 					</div>
 					<div id='divHorarioInicioEntrevista' class='primary required'>
 						<label for='horarioInicioEntrevista'> Horário do Inicio da entrevista: </label>
-						<input type='text' name='horarioInicioEntrevista' id='horarioInicioEntrevista' size='6' maxlength='5'/>
+						<input type='text' name='horarioInicioEntrevista' id='horarioInicioEntrevista' size='5' maxlength='5' class='hour'/>
 					</div>
 					<div id='divUnidade' class='primary required'>
 						<label for='unidade'> Unidade: </label>
@@ -1062,7 +1063,7 @@
 					</div>
 					<div id='divHorarioFimEntrevista' class='primary required'>
 						<label for='horarioFimEntrevista'> Horário do fim da entrevista: </label>
-						<input type='text' name='horarioFimEntrevista' id='horarioFimEntrevista' size='6' maxlength='5'/>
+						<input type='text' name='horarioFimEntrevista' id='horarioFimEntrevista' size='5' maxlength='5' class='hour'/>
 					</div>
 					<div id='fraseAjudaHorario'>
 						<p>O horário do fim da entrevista será preenchido automaticamente ao clicar no botão "Enviar Formulário."</p><br />
