Retirando a obrigatoriedade dos campos "Horario do inicio da 	entrevista" e "Horario do fim da entrevista", como solicitado pela 	Dani em 17/06;

--- a/media/index.html
+++ b/media/index.html
@@ -35,7 +35,7 @@
 						<label for='data_consulta'> Data da triagem: </label>
 						<input type="text" name="data_consulta" id="data_consulta" class='textbox required' readonly/>
 					</div>
-					<div id='divHorarioInicioEntrevista' class='primary required'>
+					<div id='divHorarioInicioEntrevista' class='primary'>
 						<label for='horarioInicioEntrevista'> Horário do Inicio da entrevista: </label>
 						<input type='text' name='horarioInicioEntrevista' id='horarioInicioEntrevista' size='5' maxlength='5' class='hour'/>
 					</div>
@@ -1089,7 +1089,7 @@
 						<label for='dataFimTriagem'> Data do fim da entevista: </label>
 						<input type="text" name="dataFimTriagem" id="dataFimTriagem" class='textbox required' readonly/>
 					</div>
-					<div id='divHorarioFimEntrevista' class='primary required'>
+					<div id='divHorarioFimEntrevista' class='primary'>
 						<label for='horarioFimEntrevista'> Horário do fim da entrevista: </label>
 						<input type='text' name='horarioFimEntrevista' id='horarioFimEntrevista' size='5' maxlength='5' class='hour'/>
 					</div>
