--- a/media/index.html
+++ b/media/index.html
@@ -23,7 +23,7 @@
 		@import url(./css/jquery.timeentry.css);
 	-->
 	</style>
-	<title>Triagem de Pacientes - Baseline (Hospital)</title>
+	<title>Triagem de Pacientes - Baseline (Hospitala)</title>
 </head>
 <body>
 	<div id='mainFrame'>
@@ -53,8 +53,8 @@
 					</div>
 					<div id='divPacienteExcluido' class='primary required'>
 						<label for='pacienteExcluido'>Excluído: </label>
-						<select name = "pacienteExcluido" id="pacienteExcluido">
-							<option value=""        >  ----   	</option>
+						<select name = "pacienteExcluido" id="pacienteExcluido" class='required'>
+							<option value=""		> </option>
 							<option value="sim"		>  Sim   	</option>
 							<option value="nao"		>  Não    	</option>
 							<option value="semTcle"	>  Sem TCLE </option>
@@ -90,7 +90,7 @@
 					<div id='divNaturalidade' class='primary required'>
 						<label for='naturalidade'>Naturalidade: </label>
 						<select name="naturalidade" id="naturalidade" class='required'>
-							<option> ---- </option>
+							<option value=""> </option>
 						</select>
 					</div>
 					<div id='divSexo' class='primary required'>
@@ -107,18 +107,18 @@
 					<div id='divRaca' class='primary required'>
 						<label for='raca'>Cor da pele (expressa pelo paciente): </label>
 						<select name = "raca" id="raca" class='required'>
-							<option              >     ----   </option>
-							<option value="branco">   Branca   </option>
-							<option value="preta">    Preta    </option>
-							<option value="amarela">  Amarela  </option>
-							<option value="parda">    Parda    </option>
+							<option value=""        >   </option>
+							<option value="branco"  >   Branca   </option>
+							<option value="preta"   >    Preta    </option>
+							<option value="amarela" >  Amarela  </option>
+							<option value="parda"   >    Parda    </option>
 							<option value="Indígena"> Indígena </option>
 						</select>
 					</div>
 					<div id='divEstadoCivil' class='primary required'>
 						<label for='estado_civil'>Estado Civil: </label>
 						<select name = "estado_civil"  id="estado_civil" class='required'>
-							<option              >      ----     </option>
+							<option value=""      ></option>
 							<option value="casado">     Casado(a)     </option>
 							<option value="solteiro">   Solteiro(a)   </option>
 							<option value="amigado">    Junto/Amigado(a)   </option>
@@ -136,7 +136,7 @@
 					<div id='divEstado' class='primary required'>
 						<label for='estado'>Estado: </label>
 						<select name="estado" id="estado" class='required address'>
-							<option> ---- </option>
+							<option value="">  </option>
 						</select>
 					</div>
 					<div id='divTempoResidenteEstadoAtual' class='primary required'>
@@ -165,7 +165,8 @@
 					</div>
 				<div id='divGrauInstrucaoPaciente' class='primary required'>
 					<label for='grauInstrucaoPaciente'>Grau de Instrução do Paciente:</label>
-					<select name='grauInstrucaoPaciente' id='grauInstrucaoPaciente' style="width:360px;">
+					<select name='grauInstrucaoPaciente' id='grauInstrucaoPaciente' style="width:360px;" class='required'>
+						<option value=''							> </option>
 						<option value='ignorado'					> Ignorado	</option>
 						<option value='naoFrequentaEscola'			> Não frequenta a escola  </option>
 						<option value='primarioIncompleto'			> Primário incompleto(até 3ª série fundamental)  </option>
@@ -178,8 +179,8 @@
 				</div>
 				<div id='divGrauInstrucaoChefeFamilia' class='primary required'>
 					<label for='grauInstrucaoChefeFamilia'>Grau de Instrução do chefe de família:</label>
-					<select name='grauInstrucaoChefeFamilia' id='grauInstrucaoChefeFamilia' style="width:360px;">
-						<option value=''					> ----	</option>
+					<select name='grauInstrucaoChefeFamilia' id='grauInstrucaoChefeFamilia' style="width:360px;" class='required'>
+						<option value=''					> </option>
 						<option value='analfabetoPrimarioIncompleto'> Analfabeto / primário incompleto (até 3ª série fundamental)  </option>
 						<option value='primarioCompleto'> Primário completo(até 4ª série fundamental)  </option>
 						<option value='ginasialOuFundamentalCompleto'> Ginasial ou Fundamental completo  </option>
@@ -195,8 +196,8 @@
 					<label for='posseDeItens'> Posse de itens </label>
 						<div id='divFreezer' class='primary required'>
 							<label for='freezer'>Freezer(normal ou porta duplex):</label>
-							<select name='freezer' id='freezer' class='primary' style='width:176px'>
-								<option value=''		>----			</option>
+							<select name='freezer' id='freezer' class='primary required' style='width:176px'>
+								<option value=''		>			</option>
 								<option value='nao'		>Não			</option>
 								<option value='1'		>1				</option>
 								<option value='2'		>2				</option>
@@ -207,8 +208,8 @@
 						</div>
 						<div id='divGeladeira' class='primary required'>
 							<label for='geladeira'>Geladeira(simples ou duplex):</label>
-							<select name='geladeira' id='geladeira' class='primary' style='width:176px'>
-								<option value=''		>----			</option>
+							<select name='geladeira' id='geladeira' class='primary required' style='width:176px'>
+								<option value=''		>			</option>
 								<option value='nao'		>Não			</option>
 								<option value='1'		>1				</option>
 								<option value='2'		>2				</option>
@@ -219,8 +220,8 @@
 						</div>
 						<div id='divMaquinaLavarRoupa' class='primary required'>
 							<label for='maquinaLavarRoupa'>Máquina de lavar roupa:</label>
-							<select name='maquinaLavarRoupa' id='maquinaLavarRoupa' class='primary' style='width:176px'>
-								<option value=''		>----			</option>
+							<select name='maquinaLavarRoupa' id='maquinaLavarRoupa' class='primary required' style='width:176px'>
+								<option value=''		>			</option>
 								<option value='nao'		>Não			</option>
 								<option value='1'		>1				</option>
 								<option value='2'		>2				</option>
@@ -231,8 +232,8 @@
 						</div>
 						<div id='divVideoDVD' class='primary required'>
 							<label for='videoDVD'>Vídeo cassete / DVD:</label>
-							<select name='videoDVD' id='videoDVD' class='primary' style='width:176px'>
-								<option value=''		>----			</option>
+							<select name='videoDVD' id='videoDVD' class='primary required' style='width:176px'>
+								<option value=''		>			</option>
 								<option value='nao'		>Não			</option>
 								<option value='1'		>1				</option>
 								<option value='2'		>2				</option>
@@ -243,8 +244,8 @@
 						</div>
 						<div id='divTelevisao' class='primary required'>
 							<label for='televisao'>Televisão:</label>
-							<select name='televisao' id='televisao' class='primary' style='width:176px'>
-								<option value=''		>----			</option>
+							<select name='televisao' id='televisao' class='primary required' style='width:176px'>
+								<option value=''		>			</option>
 								<option value='nao'		>Não			</option>
 								<option value='1'		>1				</option>
 								<option value='2'		>2				</option>
@@ -255,8 +256,8 @@
 						</div>
 						<div id='divRadio' class='primary required'>
 							<label for='radio'>Rádio:</label>
-							<select name='radio' id='radio' class='primary' style='width:176px'>
-								<option value=''		>----			</option>
+							<select name='radio' id='radio' class='primary required' style='width:176px'>
+								<option value=''		>			</option>
 								<option value='nao'		>Não			</option>
 								<option value='1'		>1				</option>
 								<option value='2'		>2				</option>
@@ -267,8 +268,8 @@
 						</div>
 						<div id='divBanheiro' class='primary required'>
 							<label for='banheiro'>Banheiro:</label>
-							<select name='banheiro' id='banheiro' class='primary' style='width:176px'>
-								<option value=''		>----			</option>
+							<select name='banheiro' id='banheiro' class='primary required' style='width:176px'>
+								<option value=''		>			</option>
 								<option value='nao'		>Não			</option>
 								<option value='1'		>1				</option>
 								<option value='2'		>2				</option>
@@ -279,8 +280,8 @@
 						</div>
 						<div id='divAutomovel' class='primary required'>
 							<label for='automovel'>Automóvel:</label>
-							<select name='automovel' id='automovel' class='primary' style='width:176px'>
-								<option value=''		>----			</option>
+							<select name='automovel' id='automovel' class='primary required' style='width:176px'>
+								<option value=''		>			</option>
 								<option value='nao'		>Não			</option>
 								<option value='1'		>1				</option>
 								<option value='2'		>2				</option>
@@ -291,8 +292,8 @@
 						</div>
 						<div id='divEmpregadaMensalista' class='primary required'>
 							<label for='empregadaMensalista'>Empregada Mensalista:</label>
-							<select name='empregadaMensalista' id='empregadaMensalista' class='primary' style='width:176px'>
-								<option value=''		>----			</option>
+							<select name='empregadaMensalista' id='empregadaMensalista' class='primary required' style='width:176px'>
+								<option value=''		>			</option>
 								<option value='nao'		>Não			</option>
 								<option value='1'		>1				</option>
 								<option value='2'		>2				</option>
@@ -314,8 +315,8 @@
 					<legend>Qual a causa da internação</legend>
 					<div id='divCausasNaoMedicas' name='causasNaoMedicas' class='primary required'>
 						<label for='causasNaoMedicas'>Causas não Médicas:</label>
-						<select name='causasNaoMedicas' id='causasNaoMedicas'>
-							<option value=''						> ---					</option>
+						<select name='causasNaoMedicas' id='causasNaoMedicas' class='required'>
+							<option value=''						> 					</option>
 							<option value='moradorDeRua'			> Morador de Rua		</option>
 							<option value='alcoolista'				> Alcoolista			</option>
 							<option value='drogadito'				> Drogadito				</option>
@@ -332,8 +333,8 @@
 					</div>
 					<div id='divCausasMedicas' name='causasMedicas' class='primary required'>
 						<label for='causasMedicas'>Causas Médicas:</label>
-						<select name='causasMedicas' id='causasMedicas'>
-							<option value=''							>---						</option>
+						<select name='causasMedicas' id='causasMedicas' class='required'>
+							<option value=''							>						</option>
 							<option value='intoleranciaMedicamentosa'	> Intolerância Medicamentosa</option>
 							<option value='hepatiteMedicamentosa'		> Hepatite Medicamentosa	</option>
 							<option value='desnutricao'					> Desnutrição				</option>
@@ -353,8 +354,8 @@
 					</div>
 					<div id='divResponsavelPeloEncaminhamentoParaInternacao' name='divResponsavelPeloEncaminhamentoParaInternacao' class='primary required'>
 						<label for='responsavelPeloEncaminhamentoParaInternacao'>Como foi o encaminhamento para a internação</label>
-						<select name='responsavelPeloEncaminhamentoParaInternacao' id='responsavelPeloEncaminhamentoParaInternacao'>
-							<option value=''					> ---						</option>
+						<select name='responsavelPeloEncaminhamentoParaInternacao' id='responsavelPeloEncaminhamentoParaInternacao' class='required'>
+							<option value=''					>							</option>
 							<option value='postoDeSaude'		> Posto de Saúde  			</option>
 							<option value='upa'					> UPA  						</option>
 							<option value='hospital'			> Hospital  				</option>
@@ -392,7 +393,8 @@
 					<div class='wrap'>
 						<div id='divTosse' class='primary required sinais'>
 							<label for='tosse'>Tosse:</label>
-							<select name='tosse' id='tosse' class='selectOneSinais sinais'>
+							<select name='tosse' id='tosse' class='selectOneSinais sinais required'>
+								<option value=''></option>
 								<option value='nao'> N&atilde;o  </option>
 								<option value='sim'> Sim  </option>
 							</select>
@@ -400,7 +402,7 @@
 						<div id='divTempoTosse' class='primary required tempoSinais'>
 							<label for='tempoTosse'>Tempo:</label>
 							<select name='tempoTosse' id='tempoTosse' class='selectOneSinais required'>
-								<option>  ---- </option>
+								<option value=''> </option>
 								<option value='menos1semana'> menos de 1 semana  </option>
 								<option value='1semana'>  1 semana  </option>
 								<option value='2semanas'>  2 semanas  </option>
@@ -451,6 +453,7 @@
 						<div id='divExpectoracao' class='primary required sinais'>
 							<label for='expectoracao'>Expectoração:</label>
 							<select name='espectoracao' id='expectoracao' class='selectOneSinais sinais required'>
+								<option value=''></option>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='nao'> N&atilde;o  </option>
 								<option value='sim'> Sim  </option>
@@ -459,7 +462,7 @@
 						<div id='divTempoExpectoracao' class='primary required tempoSinais'>
 							<label for='tempoExpectoracao'>Tempo:</label>
 							<select name='tempoExpectoracao' id='tempoExpectoracao' class='selectOneSinais required'>
-								<option>  ---- </option>
+								<option value=''> </option>
 								<option value='menos1semana'> menos de 1 semana  </option>
 								<option value='1semana'>  1 semana  </option>
 								<option value='2semanas'>  2 semanas  </option>
@@ -510,6 +513,7 @@
 						<div id='divHemoptoico' class='primary required sinais'>
 							<label for='hemoptoico'>Catarro com sangue:</label>
 							<select name='hemoptoico' id='hemoptoico' class='selectOneSinais sinais required'>
+								<option value=''></option>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='sim'> Sim  </option>
 								<option value='nao'> N&atilde;o  </option>
@@ -518,7 +522,7 @@
 						<div id='divTempoHemoptoico' class='primary required tempoSinais'>
 							<label for='tempoHemoptoico'>Tempo:</label>
 							<select name='tempoHemoptoico' id='tempoHemoptoico' class='selectOneSinais required'>
-								<option>  ---- </option>
+								<option value=''>   </option>
 								<option value='menos1semana'> menos de 1 semana  </option>
 								<option value='1semana'>  1 semana  </option>
 								<option value='2semanas'>  2 semanas  </option>
@@ -577,7 +581,7 @@
 						<div id='divTempoSudorese' class='primary required tempoSinais'>
 							<label for='tempoSudorese'>Tempo:</label>
 							<select name='tempoSudorese' id='tempoSudorese' class='selectOneSinais required'>
-								<option>  ---- </option>
+								<option value=''> </option>
 								<option value='menos1semana'> menos de 1 semana  </option>
 								<option value='1semana'>  1 semana  </option>
 								<option value='2semanas'>  2 semanas  </option>
@@ -636,7 +640,7 @@
 						<div id='divTempoFebre' class='primary required tempoSinais'>
 							<label for='tempoFebre'>Tempo:</label>
 							<select name='tempoFebre' id='tempoFebre' class='selectOneSinais required'>
-								<option>  ---- </option>
+								<option value=''> </option>
 								<option value='menos1semana'> menos de 1 semana  </option>
 								<option value='1semana'>  1 semana  </option>
 								<option value='2semanas'>  2 semanas  </option>
@@ -695,7 +699,7 @@
 						<div id='divTempoPerdaDeApetite' class='primary required tempoSinais'>
 							<label for='tempoPerdaDeApetite'>Tempo:</label>
 							<select name='tempoPerdaDeApetite' id='tempoPerdaDeApetite' class='selectOneSinais required'>
-								<option>  ---- </option>
+								<option value=''> </option>
 								<option value='menos1semana'> menos de 1 semana  </option>
 								<option value='1semana'>  1 semana  </option>
 								<option value='2semanas'>  2 semanas  </option>
@@ -754,7 +758,7 @@
 						<div id='divTempoDispneia' class='primary required tempoSinais'>
 							<label for='tempoDispneia'>Tempo:</label>
 							<select name='tempoDispneia' id='tempoDispneia' class='selectOneSinais required'>
-								<option>  ---- </option>
+								<option value=''>  </option>
 								<option value='menos1semana'> menos de 1 semana  </option>
 								<option value='1semana'>  1 semana  </option>
 								<option value='2semanas'>  2 semanas  </option>
@@ -944,7 +948,6 @@
 					<div id='divFumante' class='primary required'>
 						<label for='fumante'>Fumante:</label>
 						<select name='fumante' id='fumante' class='selectOne sinais required'>
-							<option> ---- </option>
 							<option value='nao' selected> Jamais Fumou  </option>
 							<option value='exfumante'> Ex-Fumante  </option>
 							<option value='sim'> Sim  </option>
@@ -966,7 +969,6 @@
 					<div id='divBebida' class='primary required'>
 						<label for='bebida'>Consome bebidas alcoólicas:</label>
 						<select name='bebida' id='bebida' class='selectOne required'>
-							<option> ---- </option>
 							<option value='nunca' selected> Nunca consumiu  </option>
 							<option value='jaconsumiu'> Já consumiu, mas n&atilde;o mais.  </option>
 							<option value='sim'> Consome </option>
@@ -1045,7 +1047,7 @@
 					<div id='divDesfecho' name='divDesfecho' class='primary required'>
 						<label for='desfecho'>Desfecho: </label>
 						<select id='desfecho' name='desfecho' class='required'>
-							<option value=''>----</option>
+							<option value=''></option>
 							<option value='provavelTB'>Provável TB</option>
 							<option value='provavelTBResistente'>Provável TB Resistente</option>
 							<option value='naoTB'>Não TB</option>
@@ -1057,7 +1059,7 @@
 					<div id='divExames' name='divExames' class='primary required'>
 						<label for='exames'>Exames: </label>
 						<select id='exames' name='exames' class='required'>
-							<option value=''>----</option>
+							<option value=''></option>
 							<option value='baar2amostras'>BAAR 2 amostras</option>
 							<option value='raioXDeTorax'>Raio X de tórax</option>
 							<option value='BAARRaioXDeTorax'>BAAR + Raio X de tórax</option>
